--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Run a one-line script
       run: echo Hello, world!
-    - name: "Create PDF"
+    - name: Create PDF
       uses: docker://vvakame/review:3.1
       with:
         args: ./setup.sh && npm run pdf
+    - uses: actions/upload-artifact@master
+      with:
+        name: my-artifact
+        path: articles/ReVIEW-Template.pdf
