--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,7 @@ jobs:
     - name: Create PDF
       uses: docker://vvakame/review:3.1
       with:
-        args:
-          - ./setup.sh
-          - npm run pdf
+        args: ['./setup.sh', 'npm run pdf']
     - uses: actions/upload-artifact@master
       with:
         name: my-artifact
