--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Create PDF
       uses: docker://vvakame/review:3.1
       with:
-        args: ['./setup.sh', 'npm run pdf']
+        args: ./buildPdf.sh
     - uses: actions/upload-artifact@master
       with:
-        name: my-artifact
+        name: artifact
         path: articles/ReVIEW-Template.pdf
